--- a/views/about.html
+++ b/views/about.html
@@ -17,7 +17,7 @@
 <div class="textnexttoimage">
     <h3>Aly Crowley</h3>
     <b>Post-grad industry:</b> Tech.<br>
-    <b>Favorite programming language:</b> Python.<br>
+    <b>Favorite programming language:</b> Python<br>
     <b>Fun fact:</b> Can speak 5 languages.<br>
     <b>E-mail Address: </b>aly.crowley@yale.edu <br>
 </div>
@@ -30,7 +30,7 @@
     <h3>Nikhil Maddirala</h3> 
     <b>Post-grad industry:</b> Consulting <br>
     <b>Favorite programming language:</b> Javascript <br>
-    <b>Fun fact:</b><br>
+    <b>Fun fact:</b> Hates Javascript <br>
     <b>E-mail Address: </b>nikhil.maddirala@yale.edu<br>
 
 </div>
@@ -44,7 +44,7 @@
     <h3>Shikha Kaushal</h3>
     <b>Post-grad industry:</b> Tech <br>
     <b>Favorite programming language:</b> HTML <br>
-    <b>Fun fact:</b><br>
+    <b>Fun fact:</b> Walks in sub-zero temperatures. <br>
     <b>E-mail Address: </b>shikha.kaushal@yale.edu<br>
 </div>
 
