--- a/views/events/new.html
+++ b/views/events/new.html
@@ -2,6 +2,16 @@
 
 {% block body %}
 
+{% if errors %}
+    <ul class='form-errors'>
+        {% for error in errors %}
+        <li>
+            {{ error }}
+        </li>
+        {% endfor %}
+    </ul>
+{% endif %}
+
 <div class="container">
   <h2>Create Event</h2>
 
