--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <form action="/events/{{ event.id }}/rsvp" method="post">
+        <form action="/events/{{ event.id }}" method="post">
         Enter your email address to RSVP:<br>
         <input type="text" placeholder="E-mail address" name="email"><br>
         <button class="btn btn-primary btn-lg" type="submit">RSVP</button>
