--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -2,6 +2,22 @@
 
 {% block body %}
 
+{% if errors %}
+    <ul class='form-errors'>
+        {% for error in errors %}
+        <li>
+            {{ error }}
+        </li>
+        {% endfor %}
+    </ul>
+{% endif %}
+
+
+{% if confirmation %}
+{{ confirmation }}
+{% endif %}
+
+
 <div class="container">
     <br>
 
