--- a/static/bootstrap-4.1.3-dist/css/bootstrap.css
+++ b/static/bootstrap-4.1.3-dist/css/bootstrap.css
@@ -42,7 +42,7 @@
 }
 
 html {
-  font-family:'Amatic SC', cursive;
+  font-family: montserrat;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -389,18 +389,6 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 1rem;
-}
-
-.h7 {
-  margin-bottom: 0.5rem;
-  font-family: inherit;
-  font-weight: 500;
-  line-height: 1.2;
-  color: white;
-}
-
-h7, .h7 {
-  font-size: 2.5rem;
 }
 
 .lead {
