--- a/static/css/main.css
+++ b/static/css/main.css
@@ -316,7 +316,8 @@ img {
 }
 
 .special-new {
-    max-width: auto;
+    max-width: 800px;
+    height: auto;
     width: auto;
     float:left;
     overflow: hidden;
@@ -326,103 +327,3 @@ img {
 .a {
     color: #ff0000;
 }
-
-ul {
-  list-style-type: none;
-}
-
-.container-confirmation {
-    min-width: 992px !important;
-  }
-
-.container-confirmation {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  color: green;
-}
-.content {
-  min-height: calc(100vh - 70px);
-}
-
-body, html {
-    height: 100%;
-}
-
-.jumbotron-special {
-  color: white;
-  background-image: url("/static/img/yale_image.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-  width:100%;
-  font-size: 150px;
-  font-family: 'Amatic SC', cursive;
-}
-
-.container-special {
-  width: 100%;
-  padding-right: 0px;
-  padding-left: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
-.cotainer-special > img {
-  width:100%;
-}
-
-.specialtitle {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color:white;
-    font-family: 'Amatic SC', cursive;
-    font-size: 125px;
-    width:100%;
-}
-.speciallayer {
-  background: 
-    linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(/static/img/yale_image.jpg);
-  background-size: cover;
-  height: 100vh;
-  font-family: 'Amatic SC', cursive;
-  font-size: 100px;
-  width:100%;
-}
-.btn-xlarge {
-    padding: 2px 2px;
-    font-size: 100px;
-    line-height: normal;
-}
-
-footer a {
-  color:white;
-  font-family: 'Amatic SC', cursive;
-  font-size: 40px;
-  text-align: center;
-}
-.special-footer {
-    color: white;
-    width: 100%;
-    float: left;
-    padding:0px;
-    border-radius: 0%;
-    background-color: #374759;
-    text-align: center;
-    font-size: 20px;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    height: 75px;
-}
-
