--- a/views/events/new.html
+++ b/views/events/new.html
@@ -1,15 +1,16 @@
 {% extends "layout.html" %}
 
 {% block body %}
+
 {% if errors %}
     <ul class='form-errors'>
-    {% for error in errors %}
+        {% for error in errors %}
         <li>
             <font color="red">{{ error }}</font>
         </li>
-    {% endfor %}
     </ul>
-    {% endif %}
+    {% endfor %}
+{% endif %}
 
 <div class="container">
   <h2>Create Event</h2>
@@ -42,22 +43,23 @@
                 <input type="text" name="location" placeholder="Event Location"/>
                 <input type="text" name="description" placeholder="Event Description"/>
                 <label for="image"></label>
-                <input type="text" name="image" placeholder="Event Image URL">
-            <div class="col-md-6">
+                <input type="text" name="image" placeholder="Event Image URL" multiple>
+            <div class= "special-new">
                 <h5> Event Start time </h5>
                 <label for="year"></label>
+                <h5>Year</h5>
                 <select name="year">
-                    <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-                <br><br>
+            </div>
+            <div class= "special-new">
                 <label for="month"></label>
+                <h5>Month</h5>
                 <select name="month">
-                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -71,15 +73,17 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
-                <br><br>
+            </div>
+            <div class= "special-new">
                 <label for="day"></label>
+                <h5>Day</h5>
                 <select name="day">
-                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
+                    <option>6</option>
                     <option>7</option>
                     <option>8</option>
                     <option>9</option>
@@ -106,10 +110,11 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
-                <br><br>
+            </div>
+            <div class= "special-new">
                 <label for="hour"></label>
+                <h5>Hour</h5>
                 <select name="hour">
-                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -135,29 +140,33 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
+            </div>
                 <br><br>
+            <div class= "special-new">
                 <label for="minute"></label>
+                <h5>Minute</h5>
                 <select name="minute">
-                    <option disabled selected>Select Minute</option>
                     <option>00</option>
                     <option>30</option>
                     </select>
             </div>
-            <div class="col-md-6">
+            <div class= "special-new">
                 <h5> Event End time </h5>
-                <label for="endyear"></label>
-                <select name="endyear">
-                    <option disabled selected>Select Year</option>
+                <label for="yearend"></label>
+                <h5>Year</h5>
+                <select name="yearend">
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-                <br><br>
-                <label for="endmonth"></label>
+            </div>
+                <br>
+            <div class= "special-new">
+                <label for="endmonth">Month</label>
+                <h5>Month</h5>
                 <select name="endmonth">
-                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -171,10 +180,12 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
+            </div>
                 <br><br>
-                <label for="endday"></label>
+            <div class= "special-new">
+                <label for="endday">Day</label>
+                <h5>Day</h5>
                 <select name="endday">
-                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -207,10 +218,12 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
+            </div>
                 <br><br>
-                <label for="endhour"></label>
+            <div class= "special-new">
+                <label for="endhour">Hour</label>
+                <h5>Hour</h5>
                 <select name="endhour">
-                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -236,23 +249,15 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
+            </div>
                 <br><br>
-                <label for="endminute"></label>
-                <select name="endminute" align="left">
-                    <option disabled selected>Select Minute</option>
+            <div class= "special-new">
+                <label for="endminute">Minute</label>
+                <h5>Minute</h5>
+                <select name="endminute">
                     <option>00</option>
                     <option>30</option>
                     </select>
-                    <br><br>
-<!--                    <div class="dropdown">-->
-<!--                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                        Dropdown button-->
-<!--                      </button>-->
-<!--                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
-<!--                        <a class="dropdown-item">00</a>-->
-<!--                        <a class="dropdown-item">30</a>-->
-<!--  </div>-->
-<!--</div>-->
             </div>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
@@ -264,11 +269,7 @@
                 <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
         </form>
-        <br><br><br><br><br><br><br>
-
     </div>
-</div>
-</div>
 
 <script>
     function validateForm() {
@@ -290,4 +291,8 @@
     }    
 }
 </script>
+
+{% endblock %}
+
+{% block late_loading_js %}
 {% endblock %}
