--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -12,28 +12,23 @@
     </ul>
 {% endif %}
 
-<div class="container">
-<div class="container-confirmation">
-    {% if confirmation %}
-    <i><b>{{ confirmation }}</b></i>
-    {% endif %}
-</div>
-</div>
+
+{% if confirmation %}
+{{ confirmation }}
+{% endif %}
+
 
 <div class="container">
     <br>
 
 <div class="jumbotron">
     <h1 id="title" class="h1-responsive">{{ event.title }}</h1>
-    <p><span id="date">
-      <b>Date:</b> {{event.month}}/ {{event.day}}/ {{event.year}} 
-      </span></p>
-      <p><span id="time">
-      <b>Time:</b> {{event.hour}}:{{event.minute}}
-      </span></p>
-    <p class="lead"><b>Description:</b> {{ event.description }}</p>
+    <span id="date">
+      {{event.month}}/ {{event.day}}/ {{event.year}} {{event.hour}} {{event.minute}}
+    </span>
+    <p class="lead">Event Description: {{ event.description }}</p>
     <hr class="my-2">
-
+    
 <div class="row">
     <div class="col-md-4">
         <form action="/events/{{ event.id }}" method="post">
@@ -61,12 +56,9 @@
       <span class="title">{{event.title}}</span>
       <span class="description">{{event.description}}</span>
       <span class="location">{{event.location}}</span>
+  </div>
 </div>
-    
 </div>
-</div>
-
-<br>
 <br>
 
 <div class="card border-light mb-3" style="max-width: 100rem;">
@@ -88,32 +80,33 @@
   <div class="card-header">
     <h5>Event Image</h5></div>
   <div class="card-body">
-    <span id="image"><img id="image" src = "{{ event.image }}"></span>
+    <img id="image"></img>
+    <span id="image">{{ event.image }}</span></p>
   </div>
 </div>
 
 <div class="card border-light mb-3" style="max-width: 100rem;">
   <div class="card-header"><h5>Event Attendees</h5></div>
-        <ul class="list-group" id="attendees">
-        {% for attendee in attendees %}
+  <ul class="list-group" id="attendees">
+    {% for attendee in attendees %}
         <li class="list-group-item">
           <div class="card-body">
-        {{ attendee.email }}
-        {% endfor %}
-        </div>
-        </li>
-    </ul>    
-    
-  </div>
+          {{ attendee.email }}
+    {% endfor %}
+    </div>    
+    </li>
+</ul>  
+</div>
 
 <div class="card border-light mb-3" style="max-width: 100rem;">
-  <div class="card-header"><h5>Number of Donations </h5></div>
+  <div class="card-header"><h5>Number of Donations</h5></div>
   <div class="card-body">
     <p class="card-text">{{ event.donations }}
     </p>
   </div>
 </div>
 <br>
+
 </div>
 </div>
 
