--- a/views/events/new.html
+++ b/views/events/new.html
@@ -1,16 +1,15 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
 {% if errors %}
     <ul class='form-errors'>
-        {% for error in errors %}
+    {% for error in errors %}
         <li>
             <font color="red">{{ error }}</font>
         </li>
-    </ul>
     {% endfor %}
-{% endif %}
+    </ul>
+    {% endif %}
 
 <div class="container">
   <h2>Create Event</h2>
@@ -43,23 +42,22 @@
                 <input type="text" name="location" placeholder="Event Location"/>
                 <input type="text" name="description" placeholder="Event Description"/>
                 <label for="image"></label>
-                <input type="text" name="image" placeholder="Event Image URL" multiple>
-            <div class= "special-new">
+                <input type="text" name="image" placeholder="Event Image URL">
+            <div class="col-md-6">
                 <h5> Event Start time </h5>
                 <label for="year"></label>
-                <h5>Year</h5>
                 <select name="year">
+                    <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="month"></label>
-                <h5>Month</h5>
                 <select name="month">
+                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -73,17 +71,15 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="day"></label>
-                <h5>Day</h5>
                 <select name="day">
+                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
-                    <option>6</option>
                     <option>7</option>
                     <option>8</option>
                     <option>9</option>
@@ -110,11 +106,10 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="hour"></label>
-                <h5>Hour</h5>
                 <select name="hour">
+                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -140,33 +135,29 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
                 <label for="minute"></label>
-                <h5>Minute</h5>
                 <select name="minute">
+                    <option disabled selected>Select Minute</option>
                     <option>00</option>
                     <option>30</option>
                     </select>
             </div>
-            <div class= "special-new">
+            <div class="col-md-6">
                 <h5> Event End time </h5>
-                <label for="yearend"></label>
-                <h5>Year</h5>
-                <select name="yearend">
+                <label for="endyear"></label>
+                <select name="endyear">
+                    <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-            </div>
-                <br>
-            <div class= "special-new">
-                <label for="endmonth">Month</label>
-                <h5>Month</h5>
+                <br><br>
+                <label for="endmonth"></label>
                 <select name="endmonth">
+                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -180,12 +171,10 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endday">Day</label>
-                <h5>Day</h5>
+                <label for="endday"></label>
                 <select name="endday">
+                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -218,12 +207,10 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endhour">Hour</label>
-                <h5>Hour</h5>
+                <label for="endhour"></label>
                 <select name="endhour">
+                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -249,15 +236,23 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endminute">Minute</label>
-                <h5>Minute</h5>
-                <select name="endminute">
+                <label for="endminute"></label>
+                <select name="endminute" align="left">
+                    <option disabled selected>Select Minute</option>
                     <option>00</option>
                     <option>30</option>
                     </select>
+                    <br><br>
+<!--                    <div class="dropdown">-->
+<!--                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                        Dropdown button-->
+<!--                      </button>-->
+<!--                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+<!--                        <a class="dropdown-item">00</a>-->
+<!--                        <a class="dropdown-item">30</a>-->
+<!--  </div>-->
+<!--</div>-->
             </div>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
@@ -269,7 +264,11 @@
                 <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
         </form>
+        <br><br><br><br><br><br><br>
+
     </div>
+</div>
+</div>
 
 <script>
     function validateForm() {
@@ -291,8 +290,4 @@
     }    
 }
 </script>
-
-{% endblock %}
-
-{% block late_loading_js %}
 {% endblock %}
